<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_titulo_dialog"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_correctas"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_correctas_1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_correctas_2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_correctas_3"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_velocidad"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_velocidad_1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_velocidad_2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_velocidad_3"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_puntos_velocidad_4"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_juegos_niveles"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_juegos_niveles_1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_juegos_niveles_2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_juegos_niveles_3"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_practica"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_practica_1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_practica_2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaciones_practica_3"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                 />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_entendido"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_background"
                android:text="@string/entendido"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
