<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/content_description_icon"
        android:src="@drawable/sumamentelt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/notification_app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <ImageView
        android:id="@+id/bell_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:alpha="0"
        android:contentDescription="@string/content_description_bell_icon"
        android:src="@drawable/ic_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:tint="@color/blue_primary" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/notification_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bell_icon"
        app:layout_constraintWidth_max="360dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_allow"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:background="@drawable/button_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_allow"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_text"
        app:layout_constraintWidth_max="320dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_deny"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:background="@drawable/button_background_avanzado"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_deny"
        android:textColor="@color/blue_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/btn_allow"
        app:layout_constraintStart_toStartOf="@id/btn_allow"
        app:layout_constraintTop_toBottomOf="@id/btn_allow" />

</androidx.constraintlayout.widget.ConstraintLayout>
